[package]
name = "sps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dotenvy = "0.15.7"
http = "1.4.0"
reqwest = { version = "0.13.1", features = ["json", "query"] }
reqwest-middleware = { version = "0.5.0", features = ["json", "query"] }
reqwest-retry = "0.9.0"
rust_decimal = { version = "1.40.0", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
